apps/threadfin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: threadfin
  labels:
    app.kubernetes.io/name: threadfin
